Worked out executable jar Situation
Updating README to include instructions for running the program as an executable jar for our testers. Program is completely self-contained in a zip